tests/good/simple32.tig
let
  var x := range(0,10)
in
  if x < 2 then
    x := x + range(5,6)
  else
    x := x / range(5,10);
  print_int(x)
end
